--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python-project-49"
+name = "hexlet-code"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -16,8 +16,6 @@ brain-calc = "brain_games.scripts.brain_calc:main"
 brain-prime = "brain_games.scripts.brain_prime:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
-
-
 [tool.poetry.dependencies]
 python = "^3.12"
 
