--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 packages = [
   { include = "brain_games" },
 ]
+repository = 'https://github.com/Gvozdinni/python-project-49.git'
 
 
 [tool.poetry.scripts]
@@ -20,6 +21,10 @@ brain-progression = "brain_games.scripts.brain_progression:main"
 [tool.poetry.dependencies]
 python = "^3.12"
 prompt = "^0.4.1"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.4"
+flake8 = "^7.0.0"
 
 
 
