--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "6 mini-games"
+authors = ["Vyacheslav Gvozd <lolmanip201289@gmail.com>"]
 readme = "README.md"
 packages = [
   { include = "brain_games" },
